--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -28,7 +28,7 @@ FGC_prussian_constitutionalism;Colombian Empire;;;;;;;;;;;;;
 FGC_prussian_constitutionalism_ADJ;Bolivarian;;;;;;;;;;;;;
 FGC_hms_government;Colombian Kingdom;;;;;;;;;;;;;
 FGC_hms_government_ADJ;Bolivarian;;;;;;;;;;;;;
-FGC_democracy;United States of Colombia;;;;;;;;;;;;;
+FGC_democracy;The United States of Colombia;;;;;;;;;;;;;
 FGC_presidential_dictatorship;Federal Gran Colombia;;;;;;;;;;;;;
 FGC_proletarian_dictatorship;Union of Bolivarian Socialist Republics;;;;;;;;;;;;;
 FGC_proletarian_dictatorship_ADJ;Bolivarian;;;;;;;;;;;;;
