Fixing the war names

--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -131,11 +131,16 @@ form_Andes_PBC;Unite the Andes!;;;;;;;;;;;;;
 62045_desc;After years of Bolivia being part of Argentina as an autonomous province, it now has come to be part of Colombia as our autonomous province, however, as every year has passed, Bolivia has kept pushing for more autonomy from ours, now the Bolivian congress has reached a point in which they now are now pushing for full independence from ours, with the Bolivian local governor as their new president, claiming that Bolivia has spent too long being controlled by "foreigners" and now they want to choose their own path as a full independent country. When the news about this spread through the country, people in the streets, mainly the northeners are demanding for the direct annexation of the Bolivian state, while some of our politicians and southern indigenous people pushes for Bolivia to be left alone, with claims that Bolivia would be too much problem to control and that the indigenous people might suffer from oppresion and discrimination like the peruvian indigenous people has suffered for years, it is time to make a choice regarding the Bolivian question.;;;;;;;;;;;;;
 62047_desc;A tragedy occured in the Guantanamo Bay, after the Colombian government had annouced their desire to finally liberate Cuba from Spanish control, a small group of militia with 1,000 men led by Fernando Gomez led an expedition on Guantanamo Bay, on the idea to convince the local people to join their campaign and liberate them from Spanish rule. But as it turns out, the expedition failed when a small spanish army who were already expecting a surprise invasion to Cuba, arrived to Guantanamo and attacked the expedition, resulting in 38 men killed and more than 300 captured along Fernando himself and a couple of civilians who joined their cause. Outrage spread out through the country, with the Colombian foreign minister on Spain demanding the liberation of the captured colombians, which ended up in the foreign minister being expelled from Spain, the assembly now has given the permission to the Colombian government to declare war on Spain. Is it now the time to finally expell the Spanish from the Americas and liberate our fellow soldiers who fought for what was right.;;;;;;;;;;;;;
 62048_desc;After the Guantanamo Incident and the expulsion of the Colombian foreign minister, The Colombians did't found themselves happy for it, and now the Colombian government has now send an official declaration of War with the intent of taking away our islands from ours, though, many aren't sure if we can win against a strong Colombia, we must fight for our nation if it means to protect our national sovereign.;;;;;;;;;;;;;
-AGRESSION_WAR_CUT_DOWN_TO_SIZE_NO_INFAMY_NAME_GCO_PBC;Colombian Intervention in the War of the Confederation;;;;;;;;;;;;;
-AGRESSION_WAR_CUT_DOWN_TO_SIZE_NO_INFAMY_NAME_GCO_PEU;Colombian Intervention in the War of the Confederation;;;;;;;;;;;;;
-AGRESSION_WAR_CUT_DOWN_TO_SIZE_NO_INFAMY_NAME_GCO_SPU;Colombian Intervention in the War of the Confederation;;;;;;;;;;;;;
-AGRESSION_WAR_CUT_DOWN_TO_SIZE_NO_INFAMY_NAME_GCO_BRZ;The Amazon War;;;;;;;;;;;;;
-AGGRESSION_WAR_CUT_DOWN_TO_SIZE_NO_INFAMY_NAME_GCO_HAI;The Hispanola War;;;;;;;;;;;;;
+AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_PBC;Colombian Intervention in the War of the Confederation;;;;;;;;;;;;;
+NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_PBC;Colombian Intervention in the War of the Confederation;;;;;;;;;;;;;
+AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_BRZ;The Amazon War;;;;;;;;;;;;;
+NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_BRZ;The Amazon War;;;;;;;;;;;;;
+AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_HAI;The Hispanola War;;;;;;;;;;;;;
+NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_HAI;The Hispanola War;;;;;;;;;;;;;
+AGRESSION_WAR_ALL_CORES_NAME_GCO_SPA;The Spanish-Colombian War;;;;;;;;;;;;;
+AGRESSION_WAR_ALL_CORES_NAME_GCO_SPC;The Spanish-Colombian War;;;;;;;;;;;;;
+NORMAL_WAR_ALL_CORES_NAME_GCO_SPA;The Spanish-Colombian War;;;;;;;;;;;;;
+NORMAL_WAR_ALL_CORES_NAME_GCO_SPC;The Spanish-Colombian War;;;;;;;;;;;;;
 Colombian_Brazilian_Border_Tension; Amazonian Tensions;;;;;;;;;;;;;
 rgr_vs_mex; War of Mexican Aggression;;;;;;;;;;;;;
 rgr_destiny_decided; Rio Grande's destiny decided.;;;;;;;;;;;;;
