Minor Armenia Flavour (Grim)

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -88,7 +88,7 @@ ILK_republic;Iranzamin;;;;;;;;;;;;;
 PROV921;Nigde;;;;;;;;;;;;;
 PROV934;Diwaniyah;;;;;;;;;;;;;
 PROV1049;Novorossiysk;;;;;;;;;;;;;
-PROV1099;Alexandropol;;;;;;;;;;;;;
+PROV1099;Gyumri;;;;;;;;;;;;;
 PROV1105;Yelizavetpol;;;;;;;;;;;;;
 PROV1119;Poshtkuh;;;;;;;;;;;;;
 PROV1127;Esfahan;;;;;;;;;;;;;
