--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -217,7 +217,7 @@ EGY_843;Ege Adalari;;;;;;;;;;;;;
 TUR_832;Teselya;;;;;;;;;;;;;
 AUS_624;Burgenland;;;;;;;;;;;;;
 PROV368;Queen Charlotte Islands;;;;;;;;;;;;;
-PROV2548;Igdir;;;;;;;;;;;;;
+PROV2548;Surmalu;;;;;;;;;;;;;
 PROV1179;al-Hudaydah;;;;;;;;;;;;;
 PROV1841;al-Fashir;;;;;;;;;;;;;
 PROV928;Rewanduz;;;;;;;;;;;;;
