--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9472,7 +9472,7 @@ PROV1102;Baku;Baku;Baku;;Bak?;;;;;;;;
 PROV1103;Siyazen;Siyazen;Siyazen;;Siyazen;;;;;;;;;
 PROV1104;Nukha;Nukha;Nukha;;Nukha;;;;;;;;;
 PROV1105;Ganja;Ganja;Ganja;;Ganja;;;;;;;;;
-PROV1106;Agdam;Agdam;Agdam;;Agdam;;;;;;;;;
+PROV1106;Shusha;Shusha;Shusha;;Shusha;;;;;;;;;
 PROV1107;Lankaran;Lankaran;Lankaran;;Lankaran;;;;;;;;;
 PROV1108;Tabriz;Tabriz;Tabriz;;Tabrîz;;;;;;;;;
 PROV1109;Khvoy;Khvoy;Khvoy;;Jvoy;;;;;;;;;
