--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -158,6 +158,7 @@ colonial_company_4_ruler;Governor;;;;;;;;;
 QUE_absolute_empire;Canada;;;;;;;;;
 QUE_semi_constitutional_empire;Canada;;;;;;;;;
 QUE_constitutional_empire;Canada;;;;;;;;;
+RUS_proletarian_dictatorship;Union of Soviet Socialist Republics;;;;;;;;;
 lanzas_desc;Two years ago, the caudillo Timoteo Aparicio, leader of the Partido Nacional, commonly known as the "Blancos," jump-started a revolution known as "Revolúcion de las Lanzas" (Revolution of the Lances). Timoteo's desires with said revolution were to increase the representation of minority parties within the Uruguayan government. Timoteo has been successful, forcing us to ratify a power-sharing treaty, giving the Partido Nacional political control over the departments of Cerro Largo, Florida, Canelones, and San José.;;;;;;;;;
 EVTOPTA46400;Those damn Blancos!;;;;;;;;;
 itatiaia_desc;For the first time, the "Pico das Agulhas Negras" (Black needles peak) localised in the Itatiaia massif, part of the Mantiqueira mountains, has been hiked by Carlos Spierling and Osvaldo Leal. Franklin Massena and André Rebouças attempted to climb the Itatiaia in 1878 and 1898, respectively.;;;;;;;;;
