Holy moly, that´s a lot of GEORGIA

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -571,7 +571,7 @@ USA_1;Alyaska;;;;;;;;;;;;;
 KOK_1190;Alay;;;;;;;;;;;;;
 PROV892;Hakkâri;;;;;;;;;;;;;
 PROV925;Sulaymania;;;;;;;;;;;;;
-PROV1110;Chihriq;;;;;;;;;;;;;
+PROV1110;Qal'eh-ye Chahriq;;;;;;;;;;;;;
 PROV2414;Cizre;;;;;;;;;;;;;
 PROV914;Tarabulus;;;;;;;;;;;;;
 PROV1469;Uriankhai;;;;;;;;;;;;;
