--- a/GFM/localisation/000_Garcia.csv
+++ b/GFM/localisation/000_Garcia.csv
@@ -288,3 +288,4 @@ accept_central_americans_cum_title;Grant rights to the Central Americans;;;;;;;;
 accept_central_americans_cum_desc;At a crossroads of cultural evolution, the North American Union faces a transformative choice: welcoming the diverse tapestry of Central American cultures into its collective identity. This inclusive policy champions unity and mutual respect, paving the way for a harmonious era of collaboration and understanding.;;;;;;;;;;;;;
 global_baby_boom_big;Baby Boom;;;;;;;;;;;;;
 global_baby_boom_big_desc;Improvements in life conditions in our country are leading to a country-wide baby boom.;;;;;;;;;;;;;
+PROV4106;Pachuca;;;;;;;;;;;;;
