--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -1415,7 +1415,7 @@ EVTNAME986504;The Unbelievers;;;;;;;;;;;;;
 EVTDESC986504;The Muslim tribal leaders around Bedr Khan kept saying "the time of the Christians on earth is over and killing them is thawab, a pious act". Thus, the Christians were forced to convert to Islam or flee to other districts, as the zealot fury of the Kurds of Bohtan fell on the kafirs, the unbelievers, under their rule.;;;;;;;;;;;;;
 EVT986504OPTA;The kafirs must pay. §RGain 1 infamy§W;;;;;;;;;;;;;
 EVTNAME986503;The Rise of Bedr Khan;;;;;;;;;;;;;
-EVTDESC986503;"Just when we reached the house of Yakoub Rais, a cry of 'The bey has come!' spread through the village. It was in the great alarm at the threat of invasion posed by Bedr Khan. The district of Tkhoma, which had escaped the recent massacres, was now the object of his fanatical vengeance." Bedr Khan is the young and ambitious ruler of the Emirate of Bohtan. During the war with Egypt, Turkish troops were preoccupied with invading Egyptian troops and were unable to suppress his revolt, a reaction to the modernizing and centralizing efforts of Sultan Mahmud II that were antagonized by the Kurdish feudal chiefs. As a result, he has extended his authority up to Sablagh, with Kurdish tribes pledging fealty to him. He has adopted the fanatical tenets of Darwishes and has encouraged mass slaughters against Assyrians and Yazidis in the territory he controls. The Great Powers are outraged by his treatment of the Christian populations and are demanding that we intervene immediately.;;;;;;;;;;;;;
+EVTDESC986503;"Just when we reached the house of Yakoub Rais, a cry of 'The bey has come!' spread through the village. It was in the great alarm at the threat of invasion posed by Bedr Khan. The district of Tkhoma, which had escaped the recent massacres, was now the object of his fanatical vengeance." Bedr Khan is the young and ambitious ruler of the Emirate of Bohtan. During the war with Egypt, Turkish troops were preoccupied with invading Egyptian troops and were unable to suppress his revolt, a reaction to the modernizing and centralizing efforts of Sultan Mahmud II that were antagonized by the Kurdish feudal chiefs. As a result, he has extended his authority up to Mahabad, with Kurdish tribes pledging fealty to him. He has adopted the fanatical tenets of Darwishes and has encouraged mass slaughters against Assyrians and Yazidis in the territory he controls. The Great Powers are outraged by his treatment of the Christian populations and are demanding that we intervene immediately.;;;;;;;;;;;;;
 EVT986503OPTA;Do something NOW.;;;;;;;;;;;;;
 EVT986503OPTB;Bide our time.;;;;;;;;;;;;;
 EVT986503OPTC;We will not be coerced into action.;;;;;;;;;;;;;
@@ -5749,3 +5749,32 @@ EVTOPTE640000;Keep the old anthem.;;;;;;;;;;;;;
 EVTNAME640001;The Slavic Integration;;;;;;;;;;;;;
 EVTDESC640001;The formation of the Slavic Union speaks volumes of the capacity that our people have to endure struggles. We have united all of our brothers and sisters under one single flag, may the union prevail!.;;;;;;;;;;;;;
 EVTOPTA640001;Welcome brothers!;;;;;;;;;;;;;
+EVTNAME35405;Reaffirmation of Papal Supremacy;;;;;;;;;;;;;
+EVTDESC35405;For nearly three centuries now, the power of the Papacy has been in steady decline. Once the heart of the Catholic world, the Vatican's temporal power has been eroded time and again by the march of materialism and secularism. With the rise of the Papacy to a power on the secular world stage, however, this trend has begun to reverse, and the Catholics of Europe shall recognize once again the Papal prerogative.;;;;;;;;;;;;;
+EVTOPTA35405;God Willing!;;;;;;;;;;;;;
+EVTNAME35406;Papal Decree;;;;;;;;;;
+EVTDESC35406;The Papacy has convened an ecumenical council, and seeks now to either implement changes to, or reaffirm, creeds of the Catholic church. With the current global standing of the Papacy, these decisions may have ripple effects not only in the lands of Italy, but across the entire Catholic world.;;;;;;;;;;;;;
+EVTOPTA35406;Domestic Decrees;;;;;;;;;;;;;
+EVTOPTB35406;International Decrees;;;;;;;;;;;;;
+EVTNAME35407;Domestic Decrees;;;;;;;;;;;;;
+EVTDESC35407;The Papacy is looking to reform its internal operations, and pass one of a variety of papal bulls to utilize its ecclesiastical power to the state's benefit.;;;;;;;;;;;;;
+EVTOPTA35407;Bull Reaffirming Papal Supremacy;;;;;;;;;;;;;
+EVTOPTB35407;Bull Expanding Religious Orders;;;;;;;;;;;;;
+EVTOPTC35407;Bull Reaffirming Papal Infallibility;;;;;;;;;;;;;
+EVTNAME35408;International Decrees;;;;;;;;;;;;;
+EVTDESC35408;The Papacy is looking to enact foreign decrees, and pass one of a variety of papal bulls in order to expand its influence globally.;;;;;;;;;;;;;;
+EVTOPTA35408;Expand Catholic Schooling internationally;;;;;;;;;;;;;
+EVTOPTB35408;Issue a Papal Bull condemning radicalism;;;;;;;;;;;;;
+EVTOPTC35408;It's been a while since we've had a crusade...;;;;;;;;;;;;;
+EVTNAME35409;The Papacy offers a Concordat;;;;;;;;;;;;;
+EVTDESC35409;The Papacy is looking to expand catholic schooling in our nation, and in turn provide a large scale boost to our ability to educate our population. This, however, may come at the cost of some control over our own internal affairs.;;;;;;;;;;;;;
+EVTOPTA35409;A wonderful proposal!;;;;;;;;;;;;;
+EVTOPTB35409;The church does not rule us!;;;;;;;;;;;;;
+EVTNAME35410;A...Crusade?;;;;;;;;;;;;;
+EVTDESC35410;The Pope must have clearly gone insane. There is no comprehending this in rational terms. Nevertheless, the most exceptionally fervent amongst our population is very much in favor of such a matter, and may be upset if we deny the word of the Vicar of Christ.;;;;;;;;;;;;;
+EVTOPTA35410;Deus Vult?;;;;;;;;;;;;;
+EVTOPTB35410;...what year does he think this is?;;;;;;;;;;;;;
+EVTNAME35411;Rerum Novarum;;;;;;;;;;;;;
+EVTDESC35401;Rerum Novarum, 'of Revolutionary Change,' was an encyclical issued by Pope Leo XIII on the 15th of May, 1891. This paper is often considered to be the key founding document of the economic ideology known as distributism, which disavows both unfettered capitalism and totalitarian socialism as proper methods of economics, instead favoring a small-business, agrarian model of economics.;;;;;;;;;;;;;
+EVTOPTA35401;The shephard shall lead, and the sheep shall follow.!;;;;;;;;;;;;;
+EVTOPTB35401;A great sentiment, but not for government.;;;;;;;;;;;;;
