--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -689,7 +689,7 @@ cunco;Kunko;;;;;;;;;;;;;
 guenoa;Guenoa;;;;;;;;;;;;;
 ache;Aché;;;;;;;;;;;;;
 chamacoco;Chamacoco;;;;;;;;;;;;;
-manjuy;Iyo'wujwa;;;;;;;;;;;;;
+manjuy;Guaykuru;;;;;;;;;;;;;
 guana;Cashquiha;;;;;;;;;;;;;
 lengua;Enlxet;;;;;;;;;;;;;
 maka;Maká;;;;;;;;;;;;;
@@ -1078,3 +1078,6 @@ yarigui;Yarigui;;;;;;;;;;;;
 muisco;Muisco;;;;;;;;;;;;
 timote;Timote;;;;;;;;;;;;
 kumana;Cumanagote;;;;;;;;;;;;
+kakan;Kakán;;;;;;;;;;;;
+camanchaco;Camanchaco;;;;;;;;;;;;
+ayoreo;Ayoreo;;;;;;;;;;;;
