--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1051,15 +1051,13 @@ GAB_communist;Union, Work, Progress;;;;;;;;;;;;;
 GAB_fascist;People's Unity Party;;;;;;;;;;;;;
 GCO;Gran Colombia;;;;;;;;;;;;;
 GCO_ADJ;Colombian;;;;;;;;;;;;;
-GCO_absolute_monarchy;New Granada;;;;;;;;;;;;;
 GCO_democracy;The Republic of Colombia;;;;;;;;;;;;;
 GCO_proletarian_dictatorship;Bolivarian Republic of Colombia;;;;;;;;;;;;;
 GCO_fascist_dictatorship;Martial Republic of Colombia;;;;;;;;;;;;;
-GCO_prussian_constitutionalism;New Granada;;;;;;;;;;;;;
-GCO_hms_government;New Granada;;;;;;;;;;;;;
+GCO_absolute_monarchy;The Kingdom of New Granada;;;;;;;;;;;;;
+GCO_prussian_constitutionalism;The Kingdom of Colombia;;;;;;;;;;;;;
+GCO_hms_government;The Kingdom of Colombia;;;;;;;;;;;;;
 GCO_absolute_monarchy_ADJ;New Granadan;;;;;;;;;;;;;
-GCO_prussian_constitutionalism_ADJ;New Granadan;;;;;;;;;;;;;
-GCO_hms_government_ADJ;New Granadan;;;;;;;;;;;;;
 GLC;Galicia;;;;;;;;;;;;;
 GLC_ADJ;Galician;;;;;;;;;;;;;
 GLC_conservative;Partido Moderado;Partido Moderado;Partido Moderado;;;;;;;;;;;
