Last of the Armenian renames

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9327,7 +9327,7 @@ PROV894;Adna;Adna;Adna;;Adna;;;;;;;;;
 PROV895;Silifke;Silifke;Silifke;;Silifke;;;;;;;;;
 PROV896;Marash;Marash;Marash;;Marash;;;;;;;;;
 PROV897;Halab;Halab;Halab;;Halab;;;;;;;;;
-PROV898;Antep;Gaziantep;Antep;;Antep;;;;;;;;;
+PROV898;Aintab;Aintab;Aintab;;Aintab;;;;;;;;;
 PROV899;Urfa;Urfa;Urfa;;Urfa;;;;;;;;;
 PROV901;Dayr al-Zour;Dayr al-Zour;Dayr al-Zour;;Dayr al-Zour;;;;;;;;;
 PROV902;Dimashq;Dimashq;Dimashq;;Dimashq;;;;;;;;;
