--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -12,7 +12,8 @@ PROV3560;Kahpota;;;;;;;;;
 PROV3567;Ye'pâmasa;;;;;;;;;
 PROV3444;Mantiqueira;;;;;;;;;
 PROV2402;Uatumã;;;;;;;;;
-PROV3584;Planalto;;;;;;;;;
+PROV3584;Rio de Janeiro;;;;;;;;;
+PROV2447;Nitherohy;;;;;;;;;
 PROV1049;Anapa;;;;;;;;;
 PROV2532;Xirianá;;;;;;;;;
 PROV2443;Diamantina;;;;;;;;;
