Some Azeri renames

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9477,13 +9477,13 @@ PROV1107;Lankaran;Lankaran;Lankaran;;Lankaran;;;;;;;;;
 PROV1108;Tabriz;Tabriz;Tabriz;;Tabrîz;;;;;;;;;
 PROV1109;Khvoy;Khvoy;Khvoy;;Jvoy;;;;;;;;;
 PROV1111;Sablagh;Sablagh;Sablagh;;Sablagh;;;;;;;;;
-PROV1112;Ardabil;Ardabil;Ardabil;;Ardebil;;;;;;;;;
+PROV1112;Ardebil;Ardebil;Ardebil;;Ardebil;;;;;;;;;
 PROV1113;Rasht;Rasht;Rasht;;Rasht;;;;;;;;;
 PROV1114;Habibabad;Noshehr;Noshehr;;Noshehr;;;;;;;;;
 PROV1115;Barforush;Barforush;Barforush;;Barforush;;;;;;;;;
 PROV1120;Khoramabad;Khoramabad;Khoramabad;;Khoramabad;;;;;;;;;
 PROV1121;Tehran;Tehéran;Teheran;;Tehrán;;;;;;;;;
-PROV1122;Hamadan;Hamadan;Hamadan;;Hamadân;;;;;;;;;
+PROV1122;Hamedan;Hamedan;Hamedan;;Hamadân;;;;;;;;;
 PROV1123;Zanjan;Zanjan;Zanjan;;Zanjan;;;;;;;;;
 PROV1124;Qazvin;Qazvin;Qazvin;;Qazvin;;;;;;;;;
 PROV1125;Qom;Qom;Qom;;Qom;;;;;;;;;
