Two Sicilies Special colorization and name

--- a/GFM/localisation/00_GSG_countries.csv
+++ b/GFM/localisation/00_GSG_countries.csv
@@ -38,10 +38,11 @@ GEN_fascist_dictatorship;Genoa;;;;;;;;;;;;;
 GEN_presidential_dictatorship;Ligurian Republic;;;;;;;;;;;;;
 GEN_democracy;Genoa;;;;;;;;;;;;;
 GEN_proletarian_dictatorship;Genoa;;;;;;;;;;;;;
-ITA_absolute_monarchy;Italy;;;;;;;;;;;;;
-ITA_absolute_empire;The Kingdom of Italy;;;;;;;;;;;;;
-ITA_semi_constitutional_empire;The Kingdom of Italy;;;;;;;;;;;;;
-ITA_constitutional_empire;The Kingdom of Italy;;;;;;;;;;;;;
+ITA_absolute_monarchy;The Kingdom of Italy;;;;;;;;;;;;;
+ITA_prussian_constitutionalism;The Kingdom of Italy;;;;;;;;;;;;;
+ITA_absolute_empire;The Italian Empire;;;;;;;;;;;;;
+ITA_semi_constitutional_empire;The Italian Empire;;;;;;;;;;;;;
+ITA_constitutional_empire;The Italian Empire;;;;;;;;;;;;;
 IDO;Indochina;;;;;;;;;;;;;
 IDO_ADJ;Indochinese;;;;;;;;;;;;;
 IDO_absolute_monarchy;Indochina;;;;;;;;;;;;;
