MORE Azeri renames

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -126,7 +126,7 @@ PROV3386;Shamakhi;;;;;;;;;;;;;
 PROV3389;al-Qa'im;;;;;;;;;;;;;
 PROV3406;al-Jahra;;;;;;;;;;;;;
 PROV3428;al-Raqqah;;;;;;;;;;;;;
-PROV3495;Bakhtaran;;;;;;;;;;;;;
+PROV3495;Kermanshah;;;;;;;;;;;;;
 PROV3496;Jiroft;;;;;;;;;;;;;
 PROV3497;Tabas;;;;;;;;;;;;;
 PROV3498;Abivard;;;;;;;;;;;;;
@@ -176,7 +176,7 @@ RUS_1102;Shirvan;;;;;;;;;;;;;
 AZB_1105;Arran;;;;;;;;;;;;;
 PER_1112;Azarbayjan-e Sharqi;;;;;;;;;;;;;
 PER_3353;Qa'inat;;;;;;;;;;;;;
-PER_3350;Azarbayjan-e Qarbi;;;;;;;;;;;;;
+PER_3350;Azarbayjan-e Gharbi;;;;;;;;;;;;;
 PER_1122;Kordestan;;;;;;;;;;;;;
 PER_1127;Iraq-e Ajami-ye Janubi;;;;;;;;;;;;;
 PER_1121;Iraq-e Ajami-ye Shomali;;;;;;;;;;;;;
