Casually drops RGR rework. Read desc
I'm falling asleep as i type send help.
Anyways, expansion for RGR based on Sarif's work, allows RGR to annex Mexico in their independence war and impose a RGR -led Mexico with federalism and capital on Monterrey, they have independent content as well to larp exclusively as independent RGR, they can rejoin Mexico if Mexico goes federalist, and they can ask to join the US if Texas gets annexed

--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -2791,7 +2791,7 @@ EVTNAME44815;Texas Recaptured!;;;;;;;;;;;;;
 EVTDESC44815;The rebel state of Tejas has been recaptured. A glorious victory for Mexico and a blow against the malcontents who seek to spread dissension and discord!;;;;;;;;;;;;;
 EVT44815OPTA;That will teach them.;;;;;;;;;;;;;
 EVTNAME44820;The Republic of the Rio Grande;;;;;;;;;;;;;
-EVTDESC44820;Inspired by the success of the Tejas rebellion, liberal malcontents in the provinces along the Rio Grande have risen up and declared their independence from Mexico with covert support from Texas. Their flag has three stars, representing Coahuila, Nuevo León and Tamaulipas, the three rebellious states. Jesús de Cárdenas, a former lawyer and political chief of the northern department of Tamaulipas has been sworn in as president of the new republic.;;;;;;;;;;;;;
+EVTDESC44820;Inspired by the success of the Texas rebellion against the centralist government, federalist malcontents in the territories along the Rio Grande have risen up and declared their independence from Mexico with covert support from Texas. Their flag has three stars, representing Coahuila, Nuevo León and Tamaulipas, the three rebellious states. Jesús de Cárdenas, a former lawyer and political chief of the northern department of Tamaulipas has been sworn in as president of the new republic.;;;;;;;;;;;;;
 EVT44820OPTA;This cannot be allowed!;;;;;;;;;;;;;
 EVT44820OPTB;We can do nothing.;;;;;;;;;;;;;
 EVTNAME44821;The Yucatan Republic;;;;;;;;;;;;;
