--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -123,7 +123,7 @@ PROV3352;Sarpol-e Zahab;;;;;;;;;;;;;
 PROV3355;Lash wa Juwayn;;;;;;;;;;;;;
 PROV3356;Ghoryan;;;;;;;;;;;;;
 PROV3386;Shamakhi;;;;;;;;;;;;;
-PROV3389;al-Qa'im;;;;;;;;;;;;;
+PROV3389;Anah;;;;;;;;;;;;;
 PROV3406;al-Jahra;;;;;;;;;;;;;
 PROV3428;al-Raqqah;;;;;;;;;;;;;
 PROV3495;Kermanshah;;;;;;;;;;;;;
