--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9351,10 +9351,10 @@ PROV923;Mosul;Mossoul;Mosul;;Mosul;;;;;;;;;
 PROV926;Baghdad;Bagdad;Baghdad;;Bagdad;;;;;;;;;
 PROV927;Samarra;Samarra;Samarra;;Samarra;;;;;;;;;
 PROV929;Karbala;Karbala;Karbala;;Karbala;;;;;;;;;
-PROV930;Kut;Kut;Kut;;Kut;;;;;;;;;
+PROV930;al-Kut;al-Kut;al-Kut;;al-Kut;;;;;;;;;
 PROV931;Rutbah;Rutbah;Rutbah;;Rutbah;;;;;;;;;
 PROV932;Basra;Bassora;Basra;;Basora;;;;;;;;;
-PROV933;Nasiriyya;Nasiriya;Nasiriyya;;Nasiriyya;;;;;;;;;
+PROV933;Suq al-Suyukh;Nasiriya;Nasiriyya;;Nasiriyya;;;;;;;;;
 PROV934;Najaf;Nadjaf;Najaf;;Najaf;;;;;;;;;
 PROV935;Kuwait;Koweït;Kuwait;;Kuwait;;;;;;;;;
 PROV936;Grodno;Grodno;Grodno;;Grodno;;;;;;;;;
