--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -143,7 +143,7 @@ PROV3403;Neybe;;;;;;;;;;;;;
 PROV3404;al-Salman;;;;;;;;;;;;;
 PROV3405;Kobajjep;;;;;;;;;;;;;
 PROV3406;Artik;;;;;;;;;;;;;
-PROV3407;Amara;;;;;;;;;;;;;
+PROV3407;Maysan;;;;;;;;;;;;;
 PROV3408;Cherbourg;;;;;;;;;;;;;
 PROV3409;Thionville;;;;;;;;;;;;;
 PROV3410;Mataquescuintla;;;;;;;;;;;;;
@@ -234,7 +234,7 @@ PROV509;Sevilla;;;;;;;;;;;;;
 PROV677;Akerman;;;;;;;;;;;;;
 PROV834;Athína;;;;;;;;;;;;;
 PROV3293;Bayburt;;;;;;;;;;;;;
-PROV3294;al-Malikiyah;;;;;;;;;;;;;
+PROV3294;Derik;;;;;;;;;;;;;
 PROV1119;Kermanshah;;;;;;;;;;;;;
 PROV1117;Sanandaj;;;;;;;;;;;;;
 PROV1118;Saqqez;;;;;;;;;;;;;
