--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -52,6 +52,8 @@ PROV909;Amman;;;;;;;;;
 PROV908;Karak;;;;;;;;;
 PROV278;Pisahua;;;;;;;;;
 PEU_278;Ucayali;;;;;;;;;
+BRZ_2429;Ceará;;;;;;;;;
+BRZ_2428;Pernambuco;;;;;;;;;
 PROV3443;Sabará;;;;;;;;;
 PROV2442;Pitangui;;;;;;;;;
 PROV2445;Uberaba;;;;;;;;;
