--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -66,12 +66,14 @@ Chile_joins_CLM_against_PBC_title;Chilean intervention in the Andean War!;;;;;;;
 Chile_joins_CLM_against_PBC_desc; Despite our previous victory some decades ago against our southern rivals, the foolish Chileans have declared our country a "threat to regional autonomy" and have begun shipping supplies to Panama! While the Chilean navy is formiddable, we will crush them with our superior army!;;;;;;;;;;;;;
 North_Andean_submission_title;Colombian submission;;;;;;;;;;;;;
 North_Andean_submission_desc;The war for control of the Andes is over, and while we can now project our influence throughout South America, our legimacy is not yet cemented. The Platineans and Brazilians have openly declared an alliance. If they plan to do retaliate against us, we must be ready for it.;;;;;;;;;;;;;
-Unite_the_Andes_GCO_title;Elevate the Southerners;;;;;;;;;;;;;
+Unite_the_Andes_GCO_title;Accept the South Andeans;;;;;;;;;;;;;
 Unite_the_Andes_GCO_desc;In order to effectively govern our new Peruvian and Bolivian states, we must ensure the Criollos are given the same rights as those of us in the North.;;;;;;;;;;;;;
-Unite_the_Andes_PBC_title;Elevate the Northerners;;;;;;;;;;;;;
+Unite_the_Andes_PBC_title;Accept the North Andeans;;;;;;;;;;;;;
 Unite_the_Andes_PBC_desc;In order to effectively govern our new Colombian states, we must ensure the Criollos are given the same rights as those of us in the South.;;;;;;;;;;;;;
-Unite_the_Andes_LPL_title;Elevate the Andeans;;;;;;;;;;;;;
-Unite_the_Andes_LPL_desc;In order to effectively govern our new Peruvian and Chilean states, we must ensure the Criollos are given the same rights as those of us in Argentina.;;;;;;;;;;;;;
+Unite_the_Andes_LPL_title;Accept the South Andeans;;;;;;;;;;;;;
+Unite_the_Andes_LPL_desc;In order to effectively govern our new Peruvian states, we must ensure the Criollos are given the same rights as those of us in Argentina.;;;;;;;;;;;;;
+Accepting_Chileans_title; Accept the Chileans;;;;;;;;;;;;;
+Accepting_Chileans_desc;In order to effectively govern our new Chilean states, we must ensure the Criollos are given the same rights as those of us in Argentina.
 choose_capital_GCO_title;Relocate the Capital of Colombia;;;;;;;;;;;;;
 choose_capital_GCO_desc;Many have suggested it is time to take the prospect of relocating our Capital seriously, now that our wounds are healed and the country is stable.;;;;;;;;;;;;;
 guyana_purchase_GCO_title;Purchase British Guyana;;;;;;;;;;;;;
@@ -162,3 +164,4 @@ Day_of_the_Sea;Día del Mar;;;;;;;;;;;;;
 Day_of_the_Sea_desc;Bolivia will never forget...;;;;;;;;;;;;;
 choose_capital_GCO;We have stabilized our nation from further decay, and are ready to house a meeting in Bogota to discuss the matter of our capital city. Some are unhappy with how the country is managed, and they’re pressuring us to discuss this matter with other delegates. If we don’t want the country to fall apart, we should listen to their concerns and resolve this dispute once and for all.;;;;;;;;;;;;;
 TITLE62043;Intervening in the Bolivian Uprising?;;;;;;;;;;;;;
+unstable_nation;Chaos in Gran Colombia;;;;;;;;;;;;;
