--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -73,7 +73,7 @@ Unite_the_Andes_PBC_desc;In order to effectively govern our new Colombian states
 Unite_the_Andes_LPL_title;Accept the South Andeans;;;;;;;;;;;;;
 Unite_the_Andes_LPL_desc;In order to effectively govern our new Peruvian states, we must ensure the Criollos are given the same rights as those of us in Argentina.;;;;;;;;;;;;;
 Accepting_Chileans_title; Accept the Chileans;;;;;;;;;;;;;
-Accepting_Chileans_desc;In order to effectively govern our new Chilean states, we must ensure the Criollos are given the same rights as those of us in Argentina.
+Accepting_Chileans_desc;In order to effectively govern our new Chilean states, we must ensure the Criollos are given the same rights as those of us in Argentina.;;;;;;;;;;;;;
 choose_capital_GCO_title;Relocate the Capital of Colombia;;;;;;;;;;;;;
 choose_capital_GCO_desc;Many have suggested it is time to take the prospect of relocating our Capital seriously, now that our wounds are healed and the country is stable.;;;;;;;;;;;;;
 guyana_purchase_GCO_title;Purchase British Guyana;;;;;;;;;;;;;
