Santa Catarina and RGS

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1460,4 +1460,6 @@ PROV4102;Nanwuine'nan;;;;;;;;;;;;;
 PROV4103;Ammalapáshkuua;;;;;;;;;;;;;
 PROV4104;Tunja;;;;;;;;;;;;;
 PROV4105;Cajamarca;;;;;;;;;;;;;
+PROV4107;Binaré;;;;;;;;;;;;;
+PROV4108;Laklanõ;;;;;;;;;;;;;
 PROV2293;Nó'ciria;;;;;;;;;;;;;
