--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10594,7 +10594,7 @@ PROV2461;Desterro;Desterro;Desterro;;Desterro;;;;;;;;;
 PROV2462;São Miguel;São Miguel;Sao Miguel;;Sao Miguel;;;;;;;;;
 PROV2463;Porto Alegre;Porto Alegre;Porto Alegre;;Porto Alegre;;;;;;;;;
 PROV2464;Pelotas;Pelotas;Pelotas;;Pelotas;;;;;;;;;
-PROV2465;Passo Fundo;Passo Fundo;Passo Fundo;;Passo Fundo;;;;;;;;;
+PROV2465;Iñacoré;Iñacoré;Iñacoré;;Iñacoré;;;;;;;;;
 PROV2466;Santo Ângelo;Santo Ângelo;Santo Ângelo;;Santo Ângelo;;;;;;;;;
 PROV2467;Alegrete;Alegrete;Alegrete;;Alegrete;;;;;;;;;
 PROV2468;Sydney;Sydney;Sydney;;Sydney;;;;;;;;;
