i shot a dog on the way to work

--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -160,3 +160,6 @@ Day_of_the_Sea_desc;Bolivia will never forget...;;;;;;;;;;;;;
 choose_capital_GCO;We have stabilized our nation from further decay, and are ready to house a meeting in Bogota to discuss the matter of our capital city. Some are unhappy with how the country is managed, and they’re pressuring us to discuss this matter with other delegates. If we don’t want the country to fall apart, we should listen to their concerns and resolve this dispute once and for all.;;;;;;;;;;;;;
 TITLE62043;Intervening in the Bolivian Uprising?;;;;;;;;;;;;;
 unstable_nation;Chaos in Gran Colombia;;;;;;;;;;;;;
+GCO_DOM_UNION;Uniting the Caribbean;;;;;;;;;;;;;
+PEU_partition;The Treaty of Cuzco;;;;;;;;;;;;;
+GCO_DESTROYED_BRZ;Colombian Amazonas;;;;;;;;;;;;;
