--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -39,8 +39,8 @@ MLN_colonial_company;Milan;;;;;;;;;;;;;
 MLN_colonial_company_ADJ;Milani;;;;;;;;;;;;;
 BSR;al-Mazkur Sheikhdom;;;;;;;;;;;;;
 BSR_ADJ;Mazkuri;;;;;;;;;;;;;
-KGN;Kagan Sheikhdom;;;;;;;;;;;;;
-KGN_ADJ;Kagani;;;;;;;;;;;;;
+KGN;Kangan Sheikhdom;;;;;;;;;;;;;
+KGN_ADJ;Kangani;;;;;;;;;;;;;
 KHN;Kharan;;;;;;;;;;;;;
 KHN_ADJ;Kharani;;;;;;;;;;;;;
 WKH;Wakhan;;;;;;;;;;;;;
