I FUCKING KNEW IT; ANGEL; ANGEEEEEEEEL

--- a/GFM/localisation/000_Garcia.csv
+++ b/GFM/localisation/000_Garcia.csv
@@ -312,7 +312,5 @@ laredo_dispute_desc;The territory of Laredo has been in dispute between Texas an
 rgr_apply_statehood_title;Apply for American Annexation;;;;;;;;;;;;;
 rgr_apply_statehood_desc;Time has passed ever since we became independent, our Texan brothers north have willingly joined the United States and it's about time we follow their example and join the Americans in their democratic republic, much more stronger and providing than the centralist government of Mexico City. §GIf you click this decision, let a few days pass after you tag switch to the USA.§W;;;;;;;;;;;;;
 rgr_claim_tex_title;Lay Claim to the Texan Lands;;;;;;;;;;;;;
-rgr_claim_tex_desc;We have successfully secured the land from our ambitious border proposal and it's now time to set our sights on the lands of our sister republic, Texas-and it won't matter whether she lies in the hands of either the Yankees or Dixies! §RGain 5 infamy§;;;;;;;;;;;;;
-rgr_claim_tex_desc;We have successfully secured the land from our ambitious border proposal and it's now time to set our sights on the lands of our sister republic, Texas-and it won't matter whether she lies in the hands of either the Yankees or Dixies! §RGain 5 infamy§;;;;;;;;;;;;;
+rgr_claim_tex_desc;We have successfully secured the land from our ambitious border proposal and it's now time to set our sights on the lands of our sister republic, Texas-and it won't matter whether she lies in the hands of either the Yankees or Dixies! §RGain 5 infamy§W;;;;;;;;;;;;;
 autonomous_migrants;Autonomous Migrants;;;;;;;;;;;;;
-
