--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -1081,3 +1081,10 @@ kumana;Cumanagote;;;;;;;;;;;;
 kakan;Kakán;;;;;;;;;;;;
 camanchaco;Camanchaco;;;;;;;;;;;;
 ayoreo;Ayoreo;;;;;;;;;;;;
+puri;Puri;;;;;;;;;;;;
+waura;Waura;;;;;;;;;;;;
+xakriaba;Xakriabá;;;;;;;;;;;;
+kamaka;Kamakã;;;;;;;;;;;;
+kariri;Kariri;;;;;;;;;;;;
+akroa;Akroá;;;;;;;;;;;;
+pankaruru;Pankarurú;;;;;;;;;;;;
