--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1462,4 +1462,10 @@ PROV4104;Tunja;;;;;;;;;;;;;
 PROV4105;Cajamarca;;;;;;;;;;;;;
 PROV4107;Binaré;;;;;;;;;;;;;
 PROV4108;Laklanõ;;;;;;;;;;;;;
+PROV4109;Wapixana;;;;;;;;;;;;;
+PROV4110;Kinikinao;;;;;;;;;;;;;
+PROV4111;Ti'aî'a;;;;;;;;;;;;;
+PROV4112;Akroá;;;;;;;;;;;;;
+PROV4113;Correntina;;;;;;;;;;;;;
+PROV4114;Ponta Porã;;;;;;;;;;;;;
 PROV2293;Nó'ciria;;;;;;;;;;;;;
