--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10551,7 +10551,7 @@ PROV2411;Santarém;Santarem;Santarem;;Santarém;;;;;;;;;
 PROV2412;Óbidos;Obidos;Obidos;;Óbidos;;;;;;;;;
 PROV2413;Marabá;Maraba;Maraba;;Maraba;;;;;;;;;
 PROV2415;Macapá;Macapa;Macapa;;Macapá;;;;;;;;;
-PROV2416;Dourados;Dourados;Dourados;;Dourados;;;;;;;;;
+PROV2416;Orarimugodoge;Orarimugodoge;Orarimugodoge;;Orarimugodoge;;;;;;;;;
 PROV2417;Vila Bela;Vila Bela;Vila Bela;;Vila Bela;;;;;;;;;
 PROV2418;Cuiabá;Cuiaba;Cuiaba;;Cuiabá;;;;;;;;;
 PROV2419;Corumbá;Corumba;Corumba;;Corumba;;;;;;;;;
@@ -10585,7 +10585,7 @@ PROV2452;Campinas;Campinas;Campinas;;Campinas;;;;;;;;;
 PROV2453;Assis;Assis;Assis;;Assis;;;;;;;;;
 PROV2454;Fiji;Fidji;Fidschi;;Islas Fiji;;;;;;;;;
 PROV2455;Iguape;Iguape;Iguape;;Iguape;;;;;;;;;
-PROV2456;Araraquara;Araraquara;Araraquara;;Araraquara;;;;;;;;;
+PROV2456;Franca;Franca;Franca;;Franca;;;;;;;;;
 PROV2457;Curitiba;Curitiba;Curitiba;;Curitiba;;;;;;;;;
 PROV2458;Guarapuava;Guarapuava;Guarapuava;;Guarapuava;;;;;;;;;
 PROV2459;Lajes;Lajes;Lajes;;Lajes;;;;;;;;;
