we do some coding

--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -6,7 +6,7 @@ PROV2446;São João D'el-Rey;;;;;;;;;
 PROV2449;Victória;;;;;;;;;
 PROV2462;Kreie-bang-rê;;;;;;;;;
 PROV2457;Curityba;;;;;;;;;
-PROV2420;Miranda;;;;;;;;;
+PROV2420;Fecho dos Morros;;;;;;;;;
 PROV3556;Tumucumaque;;;;;;;;;
 PROV3560;Kahpota;;;;;;;;;
 PROV3567;Ye'pâmasa;;;;;;;;;
@@ -92,7 +92,7 @@ PROV4030;Käkisalmi;;;;;;;;;
 PROV2458;Agûarápuaba;;;;;;;;;
 PROV2460;Ipáuzandu;;;;;;;;;
 PROV2453;Arasátyba;;;;;;;;;
-PROV3987;Sete Fogos;;;;;;;;;
+PROV3987;Opaié;;;;;;;;;
 PROV2419;Anhanduhy;;;;;;;;;
 PROV2418;Cuyaverá;;;;;;;;;
 PROV2423;Krikahâzawre;;;;;;;;;
