--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1467,5 +1467,7 @@ PROV4110;Kinikinao;;;;;;;;;;;;;
 PROV4111;Ti'aî'a;;;;;;;;;;;;;
 PROV4112;Akroá;;;;;;;;;;;;;
 PROV4113;Correntina;;;;;;;;;;;;;
-PROV4114;Ponta Porã;;;;;;;;;;;;;
+PROV4114;Punta Porá;;;;;;;;;;;;;
+PROV4115;Miranda;;;;;;;;;;;;;
+PROV4116;Santa Ana;;;;;;;;;;;;;
 PROV2293;Nó'ciria;;;;;;;;;;;;;
