--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -773,7 +773,7 @@ zoe;Zo'é;;;;;;;;;;;;;
 turiwara;Turiwára;;;;;;;;;;;;;
 kayapo;Kayapo;;;;;;;;;;;;;
 munduruku;Munduruku;;;;;;;;;;;;;
-juruna;Juruna;;;;;;;;;;;;;
+kisedje;Kisedje;;;;;;;;;;;;;
 apurina;Apuriña;;;;;;;;;;;;;
 katukina;Katukina;;;;;;;;;;;;;
 mura;Mura;;;;;;;;;;;;;
@@ -1088,3 +1088,16 @@ kamaka;Kamakã;;;;;;;;;;;;
 kariri;Kariri;;;;;;;;;;;;
 akroa;Akroá;;;;;;;;;;;;
 pankaruru;Pankarurú;;;;;;;;;;;;
+xavante;Xavante;;;;;;;;;;;;
+aweti;Aweti;;;;;;;;;;;;
+kaapor;Ka'apor;;;;;;;;;;;;
+timbira;Timbira;;;;;;;;;;;;
+juruna;Yuruna;;;;;;;;;;;;
+xikrin;Xikrin;;;;;;;;;;;;
+manao;Manaos;;;;;;;;;;;;
+cariay;Cariay;;;;;;;;;;;;
+matanawi;Matanawi;;;;;;;;;;;;
+yuqui;Yuqui;;;;;;;;;;;;
+tonalla;Tonalla;;;;;;;;;;;;
+pacahuara;Pacahuara;;;;;;;;;;;;
+nahwa;Nahwa;;;;;;;;;;;;
