--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -92,9 +92,9 @@ PROV4030;Käkisalmi;;;;;;;;;
 PROV2458;Agûarápuaba;;;;;;;;;
 PROV2460;Ipáuzandu;;;;;;;;;
 PROV2453;Arasátyba;;;;;;;;;
-PROV3987;Opaié;;;;;;;;;
+PROV3987;Exoaladi;;;;;;;;;
 PROV2419;Anhanduhy;;;;;;;;;
-PROV2418;Cuyaverá;;;;;;;;;
+PROV2418;Ajkulula;;;;;;;;;
 PROV2423;Krikahâzawre;;;;;;;;;
 PROV2425;Karaîá'y;;;;;;;;;
 PROV2417;Aripuanã;;;;;;;;;
