--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1463,11 +1463,12 @@ PROV4105;Cajamarca;;;;;;;;;;;;;
 PROV4107;Binaré;;;;;;;;;;;;;
 PROV4108;Laklanõ;;;;;;;;;;;;;
 PROV4109;Wapixana;;;;;;;;;;;;;
-PROV4110;Kinikinao;;;;;;;;;;;;;
+PROV4110;Yulutakitsi;;;;;;;;;;;;;
 PROV4111;Ti'aî'a;;;;;;;;;;;;;
 PROV4112;Akroá;;;;;;;;;;;;;
 PROV4113;Correntina;;;;;;;;;;;;;
 PROV4114;Punta Porá;;;;;;;;;;;;;
 PROV4115;Miranda;;;;;;;;;;;;;
 PROV4116;Santa Ana;;;;;;;;;;;;;
+PROV4117;Opaié;;;;;;;;;;;;;
 PROV2293;Nó'ciria;;;;;;;;;;;;;
