Amazon rainforest partly done (help)

--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -627,6 +627,7 @@ yuruti;Yurutí;;;;;;;;;;;;;
 tsafiki;Tsafiki;;;;;;;;;;;;;
 shuar;Shuar;;;;;;;;;;;;;
 achuar;Achuar;;;;;;;;;;;;;
+shayawita;Shayawita;;;;;;;;;;;;;
 runasimi;Runasimi;;;;;;;;;;;;;
 aido_pai;Aido Pai;;;;;;;;;;;;;
 zaparo;Záparo;;;;;;;;;;;;;
@@ -638,15 +639,19 @@ kawki;Kawki;;;;;;;;;;;;;
 kulyna;Kulyna;;;;;;;;;;;;;
 yine;Yine;;;;;;;;;;;;;
 ashaninca;Ashaninca;;;;;;;;;;;;;
+kakataibo;Kakataibo;;;;;;;;;;;;;
 kakinte;Kakinte;;;;;;;;;;;;;
 matsiguenga;Matsiguenga;;;;;;;;;;;;;
 nomatsiguenga;Nomatsiguenga;;;;;;;;;;;;;
+mashcopiro;Mashcopiro;;;;;;;;;;;;;
+yaminahua;Yaminahua;;;;;;;;;;;;;
 wachipairi;Wachipairi;;;;;;;;;;;;;
 hibito;Hibito;;;;;;;;;;;;;
 huambiza;Huambiza;;;;;;;;;;;;;
 amahuaca;Amahuaca;;;;;;;;;;;;;
 waripano;Waripano;;;;;;;;;;;;;
 shipibo;Shipibo;;;;;;;;;;;;;
+cashibo;Cashibo;;;;;;;;;;;;;
 eseejja;Ese'ejja;;;;;;;;;;;;;
 peba_yagua;Peba-Yagua;;;;;;;;;;;;;
 taushiro;Taushiro;;;;;;;;;;;;;
@@ -1101,3 +1106,34 @@ yuqui;Yuqui;;;;;;;;;;;;
 tonalla;Tonalla;;;;;;;;;;;;
 pacahuara;Pacahuara;;;;;;;;;;;;
 nahwa;Nahwa;;;;;;;;;;;;
+machinere;Machinere;;;;;;;;;;;;
+sharanahua;Sharanahua;;;;;;;;;;;;
+cashinahua;Cashinahua;;;;;;;;;;;;
+kanamari;Kanamari;;;;;;;;;;;;
+tuxinawa;Tuxinawa;;;;;;;;;;;;
+poyanawa;Poyanawa;;;;;;;;;;;;
+banawa;Banawa;;;;;;;;;;;;
+paumari;Paumari;;;;;;;;;;;;
+juma;Juma;;;;;;;;;;;;
+marubo;Marubo;;;;;;;;;;;;
+jamamadi;Jamamadi;;;;;;;;;;;;
+jarawara;Jarawara;;;;;;;;;;;;
+deni;Deni;;;;;;;;;;;;
+katawixi;Katawixi;;;;;;;;;;;;
+himarima;Himarima;;;;;;;;;;;;
+suruaha;Suruaha;;;;;;;;;;;;
+pisabo;Pisabo;;;;;;;;;;;;
+kapanahua;Kapanahua;;;;;;;;;;;;
+matis;Matis;;;;;;;;;;;;
+araiku;Araiku;;;;;;;;;;;;
+amarakaeri;Amarakaeri;;;;;;;;;;;;
+yanesha;Yanesha;;;;;;;;;;;;
+aguaruna;Aguaruna;;;;;;;;;;;;
+huitoto;Huitoto;;;;;;;;;;;;
+resigaro;Resigaro;;;;;;;;;;;;
+caishana;Caishana;;;;;;;;;;;;
+jumana;Jumana;;;;;;;;;;;;
+passe;Passe;;;;;;;;;;;;
+nadeb;Nadëb;;;;;;;;;;;;
+mepuri;Mepuri;;;;;;;;;;;;
+tukano;Tukano;;;;;;;;;;;;
