--- a/GFM/localisation/000_Garcia.csv
+++ b/GFM/localisation/000_Garcia.csv
@@ -14,9 +14,9 @@ EVTDESC4206970;The foreign minister from $FROMCOUNTRY$ has sent an ultimatum to 
 hsa_capital_stuff_title;Select Capital;;;;;;;;;;;;;
 hsa_capital_stuff_desc;We need to decide what our new capital will be.;;;;;;;;;;;;;
 claim_patria_grande_title;Claim Patria Grande;;;;;;;;;;;;;
-claim_patria_grande_desc;The dream of uniting all of the Hispanic-American people's from the former Spanish colonies in America into a single entity has been a concept most people often thought as impossible, but with our current position, we can take the first step.;;;;;;;;;;;;;
+claim_patria_grande_desc;The dream of uniting all of the Hispanic-American people's from the former Spanish colonies in America into a single entity has been a concept most people often thought as impossible, but with our current position, we can take the first step. \n\n§BYou need to annex, have in sphere or in a vassal the next cities: Mexico City, Guatemala, San Salvador, Panama City, Bogota, Caracas, Quito, Lima, La Paz, Santiago, Concepcion, Buenos Aires and Montevideo.;;;;;;;;;;;;;
 form_patria_grande_title;Form Patria Grande;;;;;;;;;;;;;
-form_patria_grande_desc;Now we have all the land of Patria Grande under our control, it's time to celebrate the birth of our new nation!;;;;;;;;;;;;;
+form_patria_grande_desc;Now we have all the land of Patria Grande under our control, it's time to celebrate the birth of our new nation! \n\n§BYou need to annex, have in sphere or in a vassal the next cities: Mexico City, Guatemala, San Salvador, Panama City, Bogota, Caracas, Quito, Lima, La Paz, Santiago, Concepcion, Buenos Aires and Montevideo.;;;;;;;;;;;;;
 claim_tordesillas_title;Claim Tordesillas;;;;;;;;;;;;;
 claim_tordesillas_desc;In 1494 the Iberian powers agreed to split the world in half between themselves, however, our interest is in how this treaty organized the Portuguese claims in South America. The nation of Brazil which gained independence from Portugal went far away from the lines established in the treaty, it's in our right to claim those lands!;;;;;;;;;;;;;
 claim_hsa_caribbean_title;Claim the Hispanic Caribbean!;;;;;;;;;;;;;
