North MEX, USA, Canada left (border changes too)

--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -544,10 +544,12 @@ chontal;Chontal;;;;;;;;;;;;;
 ixcateco;Ixcateco;;;;;;;;;;;;;
 mam;Mam;;;;;;;;;;;;;
 qatok;Qatok;;;;;;;;;;;;;
+mocho;Mocho';;;;;;;;;;;;;
 tseital;Tseltal;;;;;;;;;;;;;
 jakalteco;Jakalteco;;;;;;;;;;;;;
 zoque;Zoque;;;;;;;;;;;;;
 tsotsil;Tsotsil;;;;;;;;;;;;;
+tojolabal;Tojolab'al;;;;;;;;;;;;;
 huasteco;Huasteco;;;;;;;;;;;;;
 chinanteco;Chinanteco;;;;;;;;;;;;;
 sayulteco;Sayulteco;;;;;;;;;;;;;
@@ -568,8 +570,12 @@ ixil;Ixil;;;;;;;;;;;;;
 choru;Choru;;;;;;;;;;;;;
 poqomam;Poqomam;;;;;;;;;;;;;
 kiche;Kiche;;;;;;;;;;;;;
+qanjobal;Q'anjob'al;;;;;;;;;;;;;
+chui;Chui;;;;;;;;;;;;;
 achi;Achi;;;;;;;;;;;;;
 itza;Itza;;;;;;;;;;;;;
+lacandan;Lacandan;;;;;;;;;;;;;
+mopan;Mopan;;;;;;;;;;;;;
 qeqchi;Qeqchi;;;;;;;;;;;;;
 pocoman;Pocoman;;;;;;;;;;;;;
 chorti;Chorti;;;;;;;;;;;;;
@@ -619,6 +625,7 @@ ticuna;Ticuna;;;;;;;;;;;;;
 andoque;Andoque;;;;;;;;;;;;;
 koreguaje;Koreguaje;;;;;;;;;;;;;
 cubeo;Cubeo;;;;;;;;;;;;;
+tatuyo;Tatuyo;;;;;;;;;;;;;
 piratopuyo;Guanano;;;;;;;;;;;;;
 tariana;Tariana;;;;;;;;;;;;;
 desano;Desano;;;;;;;;;;;;;
@@ -713,9 +720,10 @@ sikiana;Sikiana;;;;;;;;;;;;;
 lokono;Lokono;;;;;;;;;;;;;
 tiriyo;Tiriyó;;;;;;;;;;;;;
 waiwai;Wai Wai;;;;;;;;;;;;;
-macuxi;Macuxí;;;;;;;;;;;;;
 akawayo;Akawayo;;;;;;;;;;;;;
 wapishana;Wapishana;;;;;;;;;;;;;
+patamona;Patamona;;;;;;;;;;;;;
+xiriana;Xiriana;;;;;;;;;;;;;
 paraujano;Paraujano;;;;;;;;;;;;;
 warekena;Warekena;;;;;;;;;;;;;
 panare;Panare;;;;;;;;;;;;;
@@ -725,13 +733,23 @@ mapoyo;Mapoyo;;;;;;;;;;;;;
 yekuana;Yekuana;;;;;;;;;;;;;
 yanam;Yanam;;;;;;;;;;;;;
 sanuma;Sanuma;;;;;;;;;;;;;
+apalai;Apalai;;;;;;;;;;;;;
+yapana;Yapana;;;;;;;;;;;;;
+kaxuiana;Kaxuiana;;;;;;;;;;;;;
+wayumara;Wayumara;;;;;;;;;;;;;
+paravilhana;Paravilhana;;;;;;;;;;;;;
 joti;Joti;;;;;;;;;;;;;
 jirajana;Jirajana;;;;;;;;;;;;;
 guamontey;Guamontey;;;;;;;;;;;;;
 arutani;Arutani;;;;;;;;;;;;;
+ninam;Ninam;;;;;;;;;;;;;
+maquintari;Maquintari;;;;;;;;;;;;;
 jukude;Jukude;;;;;;;;;;;;;
 charrua;Charrúa;;;;;;;;;;;;;
 yanomamo;Yanomamo;;;;;;;;;;;;;
+yanomami;Yanomami;;;;;;;;;;;;;
+mandawaca;Mandawaca;;;;;;;;;;;;;
+mainatari;Mainatari;;;;;;;;;;;;;
 yaminawa;Yaminawá;;;;;;;;;;;;;
 xanenawa;Xanenawa;;;;;;;;;;;;;
 kaxarari;Kaxararí;;;;;;;;;;;;;
@@ -783,7 +801,9 @@ apurina;Apuriña;;;;;;;;;;;;;
 katukina;Katukina;;;;;;;;;;;;;
 mura;Mura;;;;;;;;;;;;;
 waimiri;Waimiri;;;;;;;;;;;;;
-parukoto;Parukoto;;;;;;;;;;;;;
+bonari;Bonari;;;;;;;;;;;;;
+hixkaryana;Hixkaryana;;;;;;;;;;;;;
+parukoto;Parauana;;;;;;;;;;;;;
 amanaye;Amanaye;;;;;;;;;;;;;
 tapayuna;Tapayuna;;;;;;;;;;;;;
 kisejde;Kisejde;;;;;;;;;;;;;
@@ -1137,3 +1157,4 @@ passe;Passe;;;;;;;;;;;;
 nadeb;Nadëb;;;;;;;;;;;;
 mepuri;Mepuri;;;;;;;;;;;;
 tukano;Tukano;;;;;;;;;;;;
+guahibo;Guahibo;;;;;;;;;;;;
