--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1406,7 +1406,7 @@ PROV4040;Kusawatu;;;;;;;;;;;;;
 PROV4041;Columbus;;;;;;;;;;;;;
 PROV4042;Tampa;;;;;;;;;;;;;
 PROV4043;Nyút'ach;;;;;;;;;;;;;
-PROV4044;Maquawautaw;;;;;;;;;;;;;
+PROV4044;Post Jacob;;;;;;;;;;;;;
 PROV4045;Mattagami;;;;;;;;;;;;;
 PROV4046;Grand Portage;;;;;;;;;;;;;
 PROV4047;Auassat Kapmehenhiht;;;;;;;;;;;;;
@@ -1471,4 +1471,7 @@ PROV4114;Punta Porá;;;;;;;;;;;;;
 PROV4115;Miranda;;;;;;;;;;;;;
 PROV4116;Santa Ana;;;;;;;;;;;;;
 PROV4117;Opaié;;;;;;;;;;;;;
+PROV4118;Odagaamii;;;;;;;;;;;;;
+PROV4119;Chicago;;;;;;;;;;;;;
+PROV4120;Heey-otoyoo';;;;;;;;;;;;;
 PROV2293;Nó'ciria;;;;;;;;;;;;;
