--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -8730,16 +8730,16 @@ PROV159;Mahnahwauk;Mahnahwauk;Mahnahwauk;;Mahnahwauk;;;;;;;;;
 PROV161;Waasa;Waasa;Waasa;;Waasa;;;;;;;;;
 PROV162;Madison;Madison;Madison;;Madison;;;;;;;;;
 PROV163;Shikaakwa;Shikaakwa;Shikaakwa;;Shikaakwa;;;;;;;;;
-PROV164;Rockford;Rockford;Rockford;;Rockford;;;;;;;;;
+PROV164;Peoria;Peoria;Peoria;;Peoria;;;;;;;;;
 PROV165;Champaign;Champaign;Champaign;;Champaign;;;;;;;;;
-PROV166;Peoria;Peoria;Peoria;;Peoria;;;;;;;;;
+PROV166;Hocaagra;Hocaagra;Hocaagra;;Hocaagra;;;;;;;;;
 PROV167;Springfield;Springfield;Springfield;;Springfield;;;;;;;;;
 PROV169;Indianapolis;Indianapolis;Indianapolis;;Indianápolis;;;;;;;;;
 PROV170;Evansville;Evansville;Evansville;;Evansville;;;;;;;;;
 PROV171;Nênkâwak;Nênkâwak;Nênkâwak;;Nênkâwak;;;;;;;;;
-PROV172;Kekionga;Kekionga;Kekionga;;Kekionga;;;;;;;;;
+PROV172;Fort Wayne;Fort Wayne;Fort Wayne;;Fort Wayne;;;;;;;;;
 PROV173;Detroit;Detroit;Detroit;;Detroit;;;;;;;;;
-PROV174;Baawiting;Baawiting;Baawiting;;Baawiting;;;;;;;;;
+PROV174;Grand Rapids;Grand Rapids;Grand Rapids;;Grand Rapids;;;;;;;;;
 PROV175;Zaagiinaang;Zaagiinaang;Zaagiinaang;;Zaagiinaang;;;;;;;;;
 PROV176;Adaawewiziibi;Adaawewiziibi;Adaawewiziibi;;Adaawewiziibi;;;;;;;;;
 PROV177;Hahathunhwanh;Hahathunhwanh;Hahathunhwanh;;Hahathunhwanh;;;;;;;;;
