--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -1382,8 +1382,8 @@ EVT95660OPTA;We will see this through.;;;;;;;;;;;;;
 EVT95660OPTB;Lift up the siege and let it go.;;;;;;;;;;;;;
 EVTNAME95659;The Black Flag Army in Liuang Prabang;;;;;;;;;;;;;
 EVTDESC95659;The Black Flag Army was a splinter remnant of a bandit group recruited largely from soldiers of ethnic Zhuang background, who crossed the border in 1865 from Kwangsi, China into Upper Tonkin, then part of the Empire of Annam (Vietnam). In 1887, the Black Flag bandits crossed the border of Liuang Prabang to ransack and pillage. The small Lao kingdom was unable to defend itself and since then, they petitioned us for protection.;;;;;;;;;;;;;
-EVT95659OPTA;We won't left them helpless.;;;;;;;;;;;;;
-EVT95659OPTB;We have no interest in helping them. §GLose 1 infamy§W;;;;;;;;;;;;;
+EVT95659OPTA;We won't leave them helpless..;;;;;;;;;;;;;
+EVT95659OPTB;We have no interest in helpsing them. §GLose 1 infamy§W;;;;;;;;;;;;;
 EVTDESC3697013;A war has broken out between the rulers of Bahrain and Qatar, in violation with several treaties we had with the house Al Khalifa from Bahrain. Qatar dignitaries came to our country to ask for help and governors of regions nearby are strongly in favor of a $COUNTRY_ADJ$ intervention.;;;;;;;;;;;;;
 EVT3697013OPTA;Intervention is necessary.;;;;;;;;;;;;;
 EVT3697013OPTB;Outfit an expedition right now.;;;;;;;;;;;;;
