--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -53,6 +53,8 @@ tanka;Tanka;;;;;;;;;;;;;
 mandar;Mandar;;;;;;;;;;;;;
 roti;Roti;;;;;;;;;;;;;
 seminole;Seminole;;;;;;;;;;;;;
+creek;Creek;;;;;;;;;;;;;
+chickasaw;Chickasaw;;;;;;;;;;;;;
 okinawan;Okinawan;;;;;;;;;;;;;
 afro_turk;Afro-Turkish;;;;;;;;;;;;;
 siddi;Sidhi;;;;;;;;;;;;;
@@ -115,9 +117,15 @@ gallo;Gallo;;;;;;;;;;;;;
 choktaw;Choktaw;;;;;;;;;;;;;
 comanche;Comanche;;;;;;;;;;;;;
 wichita;Wichita;;;;;;;;;;;;;
+osage;Osage;;;;;;;;;;;;;
 caddo;Caddo;;;;;;;;;;;;;
 kiowa;Kiowa;;;;;;;;;;;;;
+pawnee;Pawnee;;;;;;;;;;;;;
+kansa;Kansa;;;;;;;;;;;;;
+otoe;Otoe;;;;;;;;;;;;;
+ponca;Ponca;;;;;;;;;;;;;
 apache;Apache;;;;;;;;;;;;;
+coahuiltecan;Coahuiltecan;;;;;;;;;;;;;
 karankawa;Karankawa;;;;;;;;;;;;;
 tonkawa;Tonkawa;;;;;;;;;;;;;
 aranama;Aranama;;;;;;;;;;;;;
@@ -141,6 +149,7 @@ garifuna;Garifuna;;;;;;;;;;;;;
 bouyei;Bouyei;;;;;;;;;;;;;
 aaniiih;Atsinah;;;;;;;;;;;;;
 kalispel;Kalispel;;;;;;;;;;;;;
+gros_ventre;Gros Ventre;;;;;;;;;;;;;
 kutenai;Kutenai;;;;;;;;;;;;;
 bitterroot;Bitterroot;;;;;;;;;;;;;
 ojibwe;Ojibwe;;;;;;;;;;;;;
@@ -150,7 +159,7 @@ cheyenne_people;Cheyenne;;;;;;;;;;;;;
 assiniboine;Assiniboine;;;;;;;;;;;;;
 sioux;Sioux;;;;;;;;;;;;;
 shoshone;Shoshone;;;;;;;;;;;;;
-arapaho;Arapaho;;;;;;;;;;;;;
+arapaho;Cheyenne-Arapaho;;;;;;;;;;;;;
 ute;Ute;;;;;;;;;;;;;
 bannock;Bannock;;;;;;;;;;;;;
 nez_perce;Nez Perce;;;;;;;;;;;;;
@@ -207,6 +216,7 @@ modoc;Modoc;;;;;;;;;;;;;
 kitanemuk;Kitanemuk;;;;;;;;;;;;;
 arbanasi;Arbanasi;;;;;;;;;;;;;
 yurok_wiyot;Yurok-Wiyot;;;;;;;;;;;;;
+tolowa;Tolowa;;;;;;;;;;;;;
 wintun;Wintun;;;;;;;;;;;;;
 cali_athabaskan;Pacific Athabaskan;;;;;;;;;;;;;
 pit_river;Pit River Native;;;;;;;;;;;;;
@@ -529,7 +539,9 @@ totonaco;Totonaco;;;;;;;;;;;;;
 tarahumara;Tarahumara;;;;;;;;;;;;;
 pima;Pima;;;;;;;;;;;;;
 guarijio;Guarijio;;;;;;;;;;;;;
+cahita;Cahita;;;;;;;;;;;;;
 tapahuano;Tepehuano;;;;;;;;;;;;;
+irritila;Irritila;;;;;;;;;;;;;
 mayo;Mayo;;;;;;;;;;;;;
 yaqui;Yaqui;;;;;;;;;;;;;
 hutchol;Hulchol;;;;;;;;;;;;;
