--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1474,4 +1474,6 @@ PROV4117;Opaié;;;;;;;;;;;;;
 PROV4118;Odagaamii;;;;;;;;;;;;;
 PROV4119;Chicago;;;;;;;;;;;;;
 PROV4120;Heey-otoyoo';;;;;;;;;;;;;
+PROV4121;Augusta;;;;;;;;;;;;;
+PROV4122;Jeffersonville;;;;;;;;;;;;;
 PROV2293;Nó'ciria;;;;;;;;;;;;;
