--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -1105,9 +1105,11 @@ amazonian;Amazonian;Amazonien;Amazonisch;;Amazónica;;;;;;;;;
 tupinamba;Tupinamba;Tupinamba;Tupinambaisch;;Tupinamba;;;;;;;;;
 metis;Metis;Métis;Metisisch;;India mestiza;;;;;;;;;
 cherokee;Cherokee;Cherokee;Cherokeenisch;;Cherokee;;;;;;;;;
-pueblo;Pueblo;Pueblo;Pueblotisch;;Pueblo;;;;;;;;;
+pueblo;Pueblo-Caddo;Pueblo-Caddo;Pueblo-Caddo;;Pueblo-Caddo;;;;;;;;;
+utian;Utian;Utian;Utian;;Utian;;;;;;;;;
+dene;Dene;Dene;Dene;;Dene;;;;;;;;;
 inuit;Inuit;Inuit;Inuitisch;;Inuit;;;;;;;;;
-cree;Cree;Cri;Creeisch;;Cree;;;;;;;;;
+cree;Algic;Algic;Algic;;Algic;;;;;;;;;
 navajo;Navajo;Navajo;Navajonisch;;Navajo;;;;;;;;;
 native_american_minor;Native American;Petites tribus amérindiennes;Uramerikanisch;;Nativo-americana menor;;;;;;;;;
 neo_european_cultures;Neo European Cultures;Cultures néo-européennes;Neoeuropäisch;;Culturas neoeuropeas;;;;;;;;;
@@ -10665,7 +10667,7 @@ PROV2550;Forte do Príncipe;Forte do Principe;Forte do Principe;;Forte do Príncip
 PROV2551;Marquesas;Marquises;Marquesas;;Marquesas;;;;;;;;;
 PROV2552;Pitcairn;Pitcairn;Pitcairn;;Pitcairn;;;;;;;;;
 PROV2553;Tuamotus;Tuamotus;Tuamotus;;Tuamotus;;;;;;;;;
-PROV2555;Augusta;Augusta;Augusta;;Augusta;;;;;;;;;
+PROV2555;Athens;Athens;Athens;;Athens;;;;;;;;;
 PROV2556;Asheville;Asheville;Asheville;;Asheville;;;;;;;;;
 PROV2559;Suhaj;Suhaj;Suhaj;;Suhaj;;;;;;;;;
 PROV2560;Darmstadt;Darmstadt;Darmstadt;;Darmstadt;;;;;;;;;
