--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -231,7 +231,7 @@ CHE_claim_missouri_arkansas_title;Reclaim Middle Mississippi;;;;;;;;;;;;;
 CHE_claim_missouri_arkansas_desc;Our peoples have been expelled from the banks of the Mississippi and their descendants now pressure the council to lay claim to these territories. Let us therefore march back east and take what's ours!;;;;;;;;;;;;;
 CHE_claim_louisiana_title;Reclaim Lower Mississippi;;;;;;;;;;;;;
 CHE_claim_louisiana_desc;There are still brothers of ours that dwell in the land where the Mississippi flows into the sea. We shall head south and liberate them - and no longer be landlocked!;;;;;;;;;;;;;
-dakota;Sioux;;;;;;;;;;;;
+dakota;Siouan;;;;;;;;;;;;
 CHE_liberal;Sequoyah Society;;;;;;;;;;;;;
 CHE_conservative;Nighthawk Society;;;;;;;;;;;;;
 CHE_socialist;Labor Society;;;;;;;;;;;;;
