--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2877,3 +2877,4 @@ hehe_war_title;The Hehe War;;;;;;;;;;;;;
 hehe_war_desc;The Hehe have grown in power in southwestern Tanganyika for decades, and now they're a power to be reckoned with. As they're one of the last roadblocks to our expansion in the region, we should launch an invasion to end their kingdom once and for all.;;;;;;;;;;;;;
 amazon_donotmove;Green Hell;;;;;;;;;;;;;
 chibchan;Miskito-Chibchan;;;;;;;;;;;;;
+muskogean;Muskogean;;;;;;;;;;;;;
